; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_entitlements_dictionary_copy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csblob_entitlements_dictionary_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_blob = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @csblob_entitlements_dictionary_copy(%struct.cs_blob* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cs_blob*, align 8
  store %struct.cs_blob* %0, %struct.cs_blob** %3, align 8
  %4 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %5 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %4, i32 0, i32 0
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %17

9:                                                ; preds = %1
  %10 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %11 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @osobject_retain(i8* %12)
  %14 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %15 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %9, %8
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i32 @osobject_retain(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
